<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_train"
        android:checked="true"
        android:icon="@drawable/selector_bottombar_tab_home"
        android:title="@string/train" />
    <item
        android:id="@+id/tab_young_general"
        android:icon="@drawable/selector_bottombar_tab_news"
        android:title="@string/young_general" />
    <item
        android:id="@+id/tab_find"
        android:icon="@drawable/selector_bottombar_tab_order"
        android:title="@string/find" />
    <item
        android:id="@+id/tab_mine"
        android:icon="@drawable/selector_bottombar_tab_mine"
        android:title="@string/mine" />

</menu>