<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGray"
    android:fitsSystemWindows="true">

    <com.habit.commonlibrary.widget.ToolbarWithBackRightProgress
        android:id="@+id/toolbar_layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar_default"
        android:background="@color/colorToolbarBg"
        app:tl_brp_back_ib_drawable="@mipmap/ic_backarrow"
        app:tl_brp_left_text="@string/mine"
        app:tl_brp_bottom_divider_visibility="visible"
        app:tl_brp_left_text_color="@color/colorText"
        app:tl_brp_right_text_color="@color/colorText"
        app:tl_brp_title="@string/setting"
        app:tl_brp_title_text_color="@color/colorText" />

    <com.habit.commonlibrary.widget.LilayItemClickableWithHeadImageTopDivider
        android:id="@+id/item_my_msg_fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:layout_below="@+id/toolbar_layout_toolbar"
        app:lichtd_bottom_divider_visibility="visible"
        app:lichtd_iv_detail_visibility="visible"
        app:lichtd_title="@string/my_msg"
        app:lichtd_top_divider_visibility="gone" />


    <com.habit.commonlibrary.widget.LilayItemClickableWithHeadImageTopDivider
        android:id="@+id/item_address_fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:layout_below="@+id/item_my_msg_fragment_settings"
        app:lichtd_bottom_divider_visibility="visible"
        app:lichtd_iv_detail_visibility="visible"
        app:lichtd_title="收货地址"
        android:visibility="gone"
        app:lichtd_top_divider_visibility="gone" />

    <com.habit.commonlibrary.widget.LilayItemClickableWithHeadImageTopDivider
        android:id="@+id/item_modify_psw_fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:layout_below="@+id/item_address_fragment_settings"
        app:lichtd_bottom_divider_visibility="visible"
        app:lichtd_iv_detail_visibility="visible"
        app:lichtd_title="@string/modify_password"
        app:lichtd_top_divider_visibility="gone" />

    <!--<com.habit.commonlibrary.widget.LilayItemClickableWithHeadImageTopDivider-->
        <!--android:id="@+id/item_tool_setting_fragment_settings"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/height_item_common"-->
        <!--android:layout_below="@+id/item_address_fragment_settings"-->
        <!--app:lichtd_bottom_divider_visibility="visible"-->
        <!--app:lichtd_iv_detail_visibility="visible"-->
        <!--app:lichtd_title="@string/tool_setting"-->
        <!--app:lichtd_top_divider_visibility="gone" />-->

    <com.habit.commonlibrary.widget.LilayItemClickableWithHeadImageTopDivider
        android:id="@+id/item_clear_cache_fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:layout_below="@+id/item_modify_psw_fragment_settings"
        app:lichtd_bottom_divider_visibility="visible"
        app:lichtd_iv_detail_visibility="visible"
        android:visibility="gone"
        app:lichtd_title="@string/clear_cache"
        app:lichtd_top_divider_visibility="gone" />

    <com.habit.commonlibrary.widget.LilayItemClickableWithHeadImageTopDivider
        android:id="@+id/item_chech_version_fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:layout_below="@+id/item_clear_cache_fragment_settings"
        app:lichtd_bottom_divider_visibility="visible"
        app:lichtd_iv_detail_visibility="visible"
        app:lichtd_title="@string/check_version"
        app:lichtd_top_divider_visibility="gone" />

    <com.habit.commonlibrary.widget.LilayItemClickableWithHeadImageTopDivider
        android:id="@+id/item_about_fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:layout_below="@+id/item_chech_version_fragment_settings"
        app:lichtd_bottom_divider_visibility="visible"
        app:lichtd_iv_detail_visibility="visible"
        app:lichtd_title="@string/yh_hz"
        app:lichtd_top_divider_visibility="gone" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_exit_fragment_setting"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:layout_below="@id/item_about_fragment_settings"
        android:layout_marginTop="@dimen/margintop_btn_exit_fragment_setting"
        android:background="@drawable/list_item_touch_bg"
        android:text="@string/exit_login"
        android:textColor="@color/color_0088cc"
        android:textSize="15dp" />


    <com.habit.commonlibrary.widget.ProgressbarLayout
        android:id="@+id/progress_fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
