<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_layout_no_datas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <ImageView
        android:id="@+id/iv_no_data_layout_no_datas"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_not_task_remind1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_no_data_table_layout_no_datas"
        android:layout_marginTop="25dp"
        android:text="@string/get_no_data_remind"
        android:textColor="@color/color_302C48"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tv_no_data_layout_no_datas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/get_data_finish_remind"
        android:textColor="@color/colorTextLight"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_refresh"
        android:layout_width="116dp"
        android:layout_height="42dp"
        android:text="@string/refresh"
        android:textColor="@color/colorTextWhite"
        android:textSize="16sp"
        android:layout_marginTop="33dp"
        android:background="@drawable/selector_refresh_btn"/>


</LinearLayout>