<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.meice.commonlibrary.widget.ToolbarWithBackRightProgress
        android:id="@+id/toolbar_layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar_default"
        app:tl_brp_back_ib_drawable="@mipmap/ic_backarrow"
        app:tl_brp_bottom_divider_visibility="visible"
        app:tl_brp_left_text="@string/back"
        app:tl_brp_left_text_color="@color/colorTextLight"
        app:tl_brp_left_text_size="@dimen/tv_text_size_common_left_toolbar"
        app:tl_brp_right_text_color="@color/colorTextLight"
        app:tl_brp_title="@string/edit_content"
        app:tl_brp_title_text_color="@color/colorText"
        app:tl_brp_title_text_size="@dimen/tv_text_size_common_title_toolbar" />

    <EditText
        android:id="@+id/et_content_fragment_edit_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_et_content_fragment_edit_content"
        android:layout_below="@+id/toolbar_layout_toolbar"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_shape_without_stroke"
        android:gravity="top|left"
        android:hint="@string/input_content"
        android:padding="@dimen/padding_et_other_fragment_resource_attribute_edit"
        android:scrollbars="vertical"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size_tv_common1_fragment_resource_attribute_edit" />

    <Button
        android:id="@+id/btn_clear_fragment_resource_attribute_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_content_fragment_edit_content"
        android:layout_marginBottom="@dimen/height_rellay_submit_fragment_resource_attribute_edit"
        android:background="@color/transparent"
        android:text="@string/clear_edit_text_content"
        android:textColor="@color/colorTextElectricalPositionRemind"
        android:textSize="@dimen/text_size_btn_clear_fragment_resource_attribute_edit" />

    <RelativeLayout
        android:id="@+id/rellay_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_rl_submit_fragment_task_order_feed_back"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_list_item_divider_common"
            android:background="@color/colorDivider" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_submit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/width_bt_submit_fragment_task_order_feed_back"
            android:layout_height="@dimen/height_bt_submit_fragment_task_order_feed_back"
            android:layout_centerInParent="true"
            android:background="@drawable/selector_common_btn"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_bt_submit_fragment_task_order_feed_back" />
    </RelativeLayout>
</RelativeLayout>
